--- a/Lab03_SpellChecker/src/main/resources/fxml/Scene.fxml
+++ b/Lab03_SpellChecker/src/main/resources/fxml/Scene.fxml
@@ -51,12 +51,18 @@
                </VBox.margin></TextArea>
             <HBox>
                <children>
-                  <Label fx:id="labelFondoPagina" />
+                  <Label fx:id="labelFondoPagina" text="                                         " textFill="RED">
+                     <HBox.margin>
+                        <Insets left="210.0" right="10.0" top="2.0" />
+                     </HBox.margin></Label>
                   <Button fx:id="clearAllB" mnemonicParsing="false" onAction="#clearAll" text="Clear Text">
                      <HBox.margin>
-                        <Insets bottom="10.0" left="417.0" right="10.0" top="3.0" />
+                        <Insets />
                      </HBox.margin></Button>
                </children>
+               <VBox.margin>
+                  <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+               </VBox.margin>
             </HBox>
          </children>
       </VBox>
